--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>CVChat</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-  <div class="container">
-    <h1>CV Chat – Asistente de tu CV</h1>
-
-    <div id="chat"></div>
-
-    <div class="input-row">
-      <input id="input" placeholder="Escribe tu pregunta..." />
-      <button onclick="sendMessage()">Enviar</button>
-    </div>
-  </div>
-
-  <script src="app.js"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RAG Chatbot</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
